--- a/windforce-innovations/index.html
+++ b/windforce-innovations/index.html
@@ -11,7 +11,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>Vite + React + TS</title>
+		<title>Windforce Innovations</title>
 	</head>
 	<body>
 		<div id="root"></div>
